--- a/style.css
+++ b/style.css
@@ -13,21 +13,37 @@ body {
 }
 
 .fillin {
-	font-weight: normal;
 	display: block;
 	margin-bottom: 11px;
+	font-weight: normal;
 }
 
-.actions {
+.line-input {
+	border: 0;
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	font-weight: inherit;
+}
+
+.line-input:focus {
+	outline:none !important
+}
+
+.action {
 	margin-top: 57px;
 }
 
 .button {
 	background-color: #ececec;
 	font-size: xx-large;
-	font-weight: normal;
 	padding: 20px 40px;
 	border-radius: 47px;
+}
+
+.button:hover {
+	background-color: #fffdd0;
+	cursor: pointer;
 }
 
 .footer {
