--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -2,20 +2,17 @@ body {
 	margin: 30px 40px;
 	color: #696969;
 	font-family: sans-serif;
+  font-size: xxx-large;
 	font-weight: lighter;
-}
-
-.lines {
-	font-size: xxx-large;
-	margin-bottom: 30px;
-	line-height: 1.6;
-	overflow-wrap: break-word;
+  line-height: 1.6;
 }
 
 .fillin {
-	display: block;
-	margin-bottom: 11px;
-	font-weight: normal;
+  font-weight: normal;
+}
+
+.lines {	
+	overflow-wrap: break-word;
 }
 
 .line-input {
@@ -27,18 +24,17 @@ body {
 }
 
 .line-input:focus {
-	outline:none !important;
-}
-
-.action {
-	margin-top: 51px;
+	outline: none !important;
 }
 
 .button {
-	background-color: #ececec;
+  display: block;
+  margin-top: 23px;
+  width: 200px;
 	font-size: xx-large;
 	padding: 20px 40px;
 	border-radius: 47px;
+  background-color: #ececec;
 }
 
 .button:hover {
@@ -47,7 +43,7 @@ body {
 }
 
 .buttonClicked {
-  animation: bgcolor 1s infinite;
+  animation: bgcolor 1s 1;
 }
 
 @keyframes bgcolor {
@@ -57,4 +53,5 @@ body {
 
 .footer {
 	margin-top: 2041px;
+  font-size: medium;
 }
