--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 30px 40px;
   color: #696969;
   font-family: sans-serif;
-  font-size: xxx-large;
+  font-size: 48px;
   font-weight: lighter;
   line-height: 1.6;
 }
@@ -31,7 +31,7 @@ body {
   display: block;
   margin-top: 23px;
   width: 200px;
-  font-size: xx-large;
+  font-size: 32px;
   padding: 20px 40px;
   border-radius: 47px;
   background-color: #ececec;
@@ -53,5 +53,23 @@ body {
 
 .footer {
   margin-top: 2041px;
-  font-size: medium;
+  font-size: 16px;
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 24px;
+  }
+
+  .button {
+    margin-top: 18px;
+    width: 150px;
+    font-size: 20px;
+    padding: 12px 24px;
+    border-radius: 31px;    
+  }
+
+  .footer {
+    font-size: 17px;
+  }
 }
