--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@ body {
   color: #696969;
   font-family: sans-serif;
   font-size: 48px;
-  font-weight: lighter;
+  font-weight: 100;
   line-height: 1.6;
 }
 
 .fillin {
-  font-weight: normal;
+  font-weight: 900;
 }
 
 .lines {	
