--- a/src/components/FillInTheBlank/style.css
+++ b/src/components/FillInTheBlank/style.css
@@ -52,13 +52,8 @@
   to {background-color: #ececec;}
 }
 
-.footer {
-  margin-top: 2041px;
-  font-size: 16px;
-}
-
 @media (max-width: 480px) {
-  body {
+  .main-fillin {
     font-size: 24px;
   }
 
@@ -72,9 +67,5 @@
 
   .button:hover {
     background-color: #ececec;
-  }
-
-  .footer {
-    font-size: 17px;
   }
 }
